--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -37,6 +37,9 @@ code {
   color: #FFFFFF;
 }
 
-#create-button-group {
-  padding: 150px;
+.page_content {
+  padding-top: 25px;
+  padding-left: 150px;
+  padding-right: 150px;
+  padding-bottom: 150px;
 }
